add survey meter

--- a/portfolio/cgt321.html
+++ b/portfolio/cgt321.html
@@ -18,8 +18,8 @@
 	<h1 style="margin-bottom: 0;">cgt321 portfolio</h1>
 	<br>
 	
-	<a href="/portfolio/cgt321/still.png" target="_blank">
-		<img src="/portfolio/cgt321/still.png"/>
+	<a href="cgt321/still.png" target="_blank">
+		<img src="cgt321/still.png"/>
 	</a>
 	<p>
 		Class still-life project.
@@ -27,8 +27,8 @@
 	
 	<br>
 	
-	<a href="/portfolio/cgt321/church.png" target="_blank">
-		<img src="/portfolio/cgt321/church.png"/>
+	<a href="cgt321/church.png" target="_blank">
+		<img src="cgt321/church.png"/>
 	</a>
 	<a href="https://www.hallstatt.net/about-hallstatt/sehenswertes-en-US/catholic-church-of-hallstatt/" target="_blank">
 		Pfarrkirche Maria am Berg in Hallstatt, Austria >>>
@@ -39,8 +39,8 @@
 	
 	<br>
 	
-	<a href="/portfolio/cgt321/mass.png" target="_blank">
-		<img src="/portfolio/cgt321/mass.png"/>
+	<a href="cgt321/mass.png" target="_blank">
+		<img src="cgt321/mass.png"/>
 	</a>
 	<a href="https://www.institute-christ-king.org/columbus-home" target="_blank">
 		St. Leo Oratory >>>
@@ -51,8 +51,8 @@
 	
 	<br>
 	
-	<a href="/portfolio/cgt321/petman.png" target="_blank">
-		<img src="/portfolio/cgt321/petman.png"/>
+	<a href="cgt321/petman.png" target="_blank">
+		<img src="cgt321/petman.png"/>
 	</a>
 	<a href="https://www.youtube.com/watch?v=mclbVTIYG8E" target="_blank">
 		Boston Dynamics' PETMAN >>>
@@ -63,8 +63,8 @@
 	
 	<br>
 	
-	<a href="/portfolio/cgt321/run.png" target="_blank">
-		<img src="/portfolio/cgt321/run.png"/>
+	<a href="cgt321/run.png" target="_blank">
+		<img src="cgt321/run.png"/>
 	</a>
 	<a href="https://www.shutterstock.com/image-photo/145798751" target="_blank">
 		Grindstone Media Group >>>
@@ -73,8 +73,8 @@
 	<br>
 	<br>
 	
-	<a href="/portfolio/cgt321/sit.png" target="_blank">
-		<img src="/portfolio/cgt321/sit.png"/>
+	<a href="cgt321/sit.png" target="_blank">
+		<img src="cgt321/sit.png"/>
 	</a>
 	<a href="https://en.wikipedia.org/wiki/The_Godfather_Part_II" target="_blank">
 		<i>The Godfather Part II</i> >>>
