--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -24,6 +24,15 @@
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 			frameborder="0"
 			allowfullscreen></iframe>
+	
+	<p>
+		This page is a work in progress!
+	</p>
+	
+	<a href="surveymeter/survey meter.png"><img src="surveymeter/survey meter.png"></a>
+	<br>
+	<a href="surveymeter/meter.jpg" style="display:inline-block; max-width:50%; float:left;"><img src="surveymeter/meter.jpg"></a>
+	<a href="surveymeter/wiremeter.png" style="display:inline-block; max-width:50%; float:left;"><img src="surveymeter/wiremeter.png"></a>
 
 </article>
 
