--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <video autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
         </a>
 		
+		<a href="/portfolio/surveymeter.html">
+            <video autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
+        </a>
+		
 		<a href="/portfolio/dioramas.html">
             <video autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
         </a>
