--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 		Scientific visualization and virtual education are my current focuses.
     </p>
     <p>
-		That doesn't mean I don't care about aesthetics though.
-        I believe that form should always follow function, but
+		That said, I still have a keen interest in design and aesthetics.
+        While I believe that form should always follow function, 
 		I still love giving my work polished visuals when appropriate.
     </p>
 
