--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -84,7 +84,7 @@
 		and the radioactive source container comes from 
 		<a href="https://polyhaven.com/a/Barrel_01" target="_blank">PolyHaven</a>.
 		The lab is built in Unity and most of the visuals were done in Blender, Substance Painter,
-		Marmoset Toolbag, and Paint.net (the most essential tool of all).
+		Marmoset Toolbag, and Affinity Designer.
 	
 	<p>
 		Completed late 2023
