--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -34,6 +34,8 @@
 	<p>
 		While I would love to show this game in action, the motion capture system
 		I am currently borrowing is currently configured for another project.
+		This demo video shows previously recorded data streamed from Motive
+		into Unity.
 	</p>
 	
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
