--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -16,6 +16,9 @@
 <article>
 
 	<h1>projected motion graphics</h1>
+	<div class="horizontal-container">
+		<img class="software-icon" src="/resources/icons/blender.png">
+	</div>
 	<h3>Custom motion graphics projected onto a courthouse facade.</h3>
 
 	<iframe style="width: 100%; aspect-ratio: 16/9;"
