--- a/portfolio/dioramas.html
+++ b/portfolio/dioramas.html
@@ -16,6 +16,11 @@
 <article>
 
 	<h1>miscellaneous models</h1>
+	<div class="horizontal-container">
+		<img class="software-icon" src="/resources/icons/blender.png">
+		<img class="software-icon" src="/resources/icons/marmoset.png">
+		<img class="software-icon" src="/resources/icons/substance.png">
+	</div>
 	<h3>Light baking tests for high-fidelity graphics on low-spec hardware.</h3>
 
 	<iframe style="width: 100%; aspect-ratio: 16/9;"
