--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -16,6 +16,13 @@
 <article>
 
 	<h1>global game jam 2024</h1>
+	<div class="horizontal-container">
+		<img class="software-icon" src="/resources/icons/blender.png">
+		<img class="software-icon" src="/resources/icons/unity.png">
+		<img class="software-icon" src="/resources/icons/csharp.png">
+		<img class="software-icon" src="/resources/icons/git.png">
+		<img class="software-icon" src="/resources/icons/meta.png">
+	</div>
 	<h3>A clown-wrangling VR game made in 48 hours by a team of 3.</h3>
 	
 	<div style="padding:56.25% 0 0 0; position:relative; background-color:black;">
