--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -16,6 +16,10 @@
 <article>
 
 	<h1>VR+mocap prototype</h1>
+	<div class="horizontal-container">
+		<img class="software-icon" src="/resources/icons/blender.png">
+		<img class="software-icon" src="/resources/icons/unity.png">
+	</div>
 	<h3>Combining VR and full-body motion capture for highly physical virtual experiences.</h3>
 	
 	<iframe style="width: 100%; aspect-ratio: 16/9;"
