--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -16,6 +16,12 @@
 <article style="position:relative;">
 
 	<h1>animations</h1>
+	<div class="horizontal-container">
+		<img class="software-icon" src="/resources/icons/blender.png">
+		<img class="software-icon" src="/resources/icons/substance.png">
+		<img class="software-icon" src="/resources/icons/marmoset.png">
+		<img class="software-icon" src="/resources/icons/houdini.png">
+	</div>
 	<h3>Fragments from work-in-progress projects.</h3>
 
 	<div style="padding:56.25% 0 0 0;position:relative;">
