--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -16,6 +16,16 @@
 <article>
 
 	<h1>nuclear engineering<br>virtual education</h1>
+	<div class="horizontal-container">
+		<img class="software-icon" src="/resources/icons/unity.png">
+		<img class="software-icon" src="/resources/icons/csharp.png">
+		<img class="software-icon" src="/resources/icons/blender.png">
+		<img class="software-icon" src="/resources/icons/marmoset.png">
+		<img class="software-icon" src="/resources/icons/substance.png">
+		<img class="software-icon" src="/resources/icons/git.png">
+		<img class="software-icon" src="/resources/icons/ambientcg.png">
+		<img class="software-icon" src="/resources/icons/polyhaven.png">
+	</div>
 	<h3>A simulated lab space for Purdue University's Nuclear Engineering department.</h3>
 
 	<div style="padding:56.25% 0 0 0; position:relative; background-color:black;">
