--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <div class="grid" style="padding-top: 75px;">
 
+		<a href="/portfolio/mocap.html">
+			<video autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
+		</a>
+
         <a href="/portfolio/courthouse.html">
             <video autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
         </a>
