--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -27,43 +27,36 @@
 	<h3>Combining VR and full-body motion capture for highly physical virtual experiences.</h3>
 	
 	<iframe style="width: 100%; aspect-ratio: 16/9;"
-			src="https://www.youtube.com/embed/flj17pNxaWo"
+			src="https://www.youtube.com/embed/IgpgE4URJyo"
 			title="YouTube video player"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 			frameborder="0"
 			allowfullscreen></iframe>
 			
 	<p>
-		This is a work-in-progress VR multiplayer sword dueling game.
-		Two players face off with physical foam swords on a motion capture stage.
+		This is a prototype VR multiplayer sword dueling game.
+		Two players are intended to face off with physical foam swords on a motion capture stage.
 		The capture data is streamed to the VR headsets to drive visuals that align 
 		with the real world.
-	</p>
-	
-	<iframe style="width: 100%; aspect-ratio: 16/9;"
-			src="https://www.youtube.com/embed/b65-xRNqHeQ"
-			title="YouTube video player"
-			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-			frameborder="0"
-			allowfullscreen></iframe>
-	
-	<p>
-		I am using an OptiTrack system streaming data to a modified version of
-		the official OptiTrack Unity plugin for 1:1 skeletal tracking. 
-		In this example a friend and I swing tracked foam swords at each other
-		which drives the lightsabers. 
-		Skeletal tracking is not visible in this test.
 	</p>
 	
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
 	
 	<p>
-		I used several CC0 assets from <a href="polyhaven.com" target="_blank">PolyHaven.com</a>
-		and <a href="ambientcg.com" target="_blank">AmbientCG.com</a> to create a generic
-		lava planet.
+		This prototype version only supports one VR user at the moment.
+		I am using an OptiTrack system streaming data to a modified version of
+		the official OptiTrack Unity plugin for 1:1 skeletal tracking.
+		There is a lot of work to be done to improve space calibration, 
+		body tracking, latency, and the foam swords themselves
+		(too heavy!).
 	</p>
 	
-	<a href="mocap/scene2.png" target="_blank"><img src="mocap/scene2.png"></a>
+	<p>
+		My friend <a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
+		helped a ton with testing and foam sword creation. I used several CC0 assets from <a href="polyhaven.com" target="_blank">PolyHaven.com</a>
+		and <a href="ambientcg.com" target="_blank">AmbientCG.com</a> to create a generic
+		lava planet. Thank you!
+	</p>
 
 </article>
 
