hide polyhaven and ambientcg icons for now

--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -23,7 +23,7 @@
 		<img class="software-icon" src="/resources/icons/substance.png">
 		<img class="software-icon" src="/resources/icons/git.png">
 		<img class="software-icon" src="/resources/icons/meta.png">
-		<img class="software-icon" src="/resources/icons/polyhaven.png">
+		<!-- <img class="software-icon" src="/resources/icons/polyhaven.png"> -->
 	</div>
 	<h3>A prototype augmented reality program for technique-based training.</h3>
 	
