--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -21,8 +21,8 @@
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/motive.png">
 		<img class="software-icon" src="/resources/icons/meta.png">
-		<img class="software-icon" src="/resources/icons/polyhaven.png">
-		<img class="software-icon" src="/resources/icons/ambientcg.png">
+		<!-- <img class="software-icon" src="/resources/icons/polyhaven.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/ambientcg.png"> -->
 	</div>
 	<h3>Combining VR and full-body motion capture for highly physical virtual experiences.</h3>
 	
