--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -53,9 +53,10 @@
 	
 	<p>
 		My friend <a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
-		helped a ton with testing and foam sword creation. I used several CC0 assets from <a href="polyhaven.com" target="_blank">PolyHaven.com</a>
-		and <a href="ambientcg.com" target="_blank">AmbientCG.com</a> to create a generic
-		lava planet. Thank you!
+		helped a ton with testing and foam sword creation. I used several CC0 assets from 
+		<a href="https://polyhaven.com" target="_blank">PolyHaven.com</a>
+		and <a href="https://ambientcg.com" target="_blank">AmbientCG.com</a>
+		to create a generic lava planet. Thank you!
 	</p>
 
 </article>
