tool icon tweaks

--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -16,16 +16,14 @@
 <article>
 
 	<h1>projected motion graphics</h1>
-	<div class="horizontal-container">
+	<h3>
+		Custom motion graphics projected onto a courthouse facade.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
-	</div>
-	<h3>Custom motion graphics projected onto a courthouse facade.</h3>
+	</h3>
 
-	<iframe style="width: 100%; aspect-ratio: 16/9;"
+	<iframe class="webvid"
 			src="https://www.youtube.com/embed/vAEIovOlc44"
-			title="YouTube video player"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-			frameborder="0"
 			allowfullscreen></iframe>
 			
 	<p>
