--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -16,21 +16,18 @@
 <article>
 
 	<h1>VR+mocap prototype</h1>
-	<div class="horizontal-container">
+	
+	<h3>
+		Combining VR and full-body motion capture for highly physical virtual experiences.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/motive.png">
 		<img class="software-icon" src="/resources/icons/meta.png">
-		<!-- <img class="software-icon" src="/resources/icons/polyhaven.png"> -->
-		<!-- <img class="software-icon" src="/resources/icons/ambientcg.png"> -->
-	</div>
-	<h3>Combining VR and full-body motion capture for highly physical virtual experiences.</h3>
+	</h3>
 	
-	<iframe style="width: 100%; aspect-ratio: 16/9;"
+	<iframe class="webvid"
 			src="https://www.youtube.com/embed/IgpgE4URJyo"
-			title="YouTube video player"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-			frameborder="0"
 			allowfullscreen></iframe>
 			
 	<p>
