--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -16,27 +16,24 @@
 <article style="position:relative;">
 
 	<h1>animations</h1>
-	<div class="horizontal-container">
+	<h3>
+		Fragments from work-in-progress projects.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
 		<img class="software-icon" src="/resources/icons/houdini.png">
-	</div>
-	<h3>Fragments from work-in-progress projects.</h3>
+	</h3>
 
-	<div style="padding:56.25% 0 0 0;position:relative;">
-		<iframe src="https://player.vimeo.com/video/822188345?h=66eadcb174&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
-				style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-				allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-	</div>
+	<iframe class="webvid"
+		src="https://player.vimeo.com/video/822188345?h=66eadcb174&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+		allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	
 	<br>
 	
-	<div style="padding:56.25% 0 0 0;position:relative;">
-		<iframe src="https://www.youtube.com/embed/Aae3vmD3QM0" title="YouTube video player" frameborder="0" 
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-			allowfullscreen style="width:100%; height:100%; top:0; position:absolute;"></iframe>
-	</div>
+	<iframe class="webvid"
+			src="https://www.youtube.com/embed/Aae3vmD3QM0"
+			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+			allowfullscreen></iframe>
 
 	<script src="https://player.vimeo.com/api/player.js"></script>
 
