--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -16,22 +16,19 @@
 <article>
 
 	<h1>nuclear pharmacy<br>safety training prototype</h1>
-	<div class="horizontal-container">
+	<h3>
+		A prototype augmented reality program for technique-based training.<br>
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
 		<img class="software-icon" src="/resources/icons/git.png">
 		<img class="software-icon" src="/resources/icons/meta.png">
-		<!-- <img class="software-icon" src="/resources/icons/polyhaven.png"> -->
-	</div>
-	<h3>A prototype augmented reality program for technique-based training.</h3>
+	</h3>
 	
-	<iframe style="width: 100%; aspect-ratio: 16/9;"
+	<iframe class="webvid"
 			src="https://www.youtube.com/embed/Jx7QUGfDt30"
-			title="YouTube video player"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-			frameborder="0"
 			allowfullscreen></iframe>
 	
 	<p>
