--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -16,34 +16,34 @@
 <article>
 
 	<h1>nuclear engineering<br>virtual education</h1>
-	<div class="horizontal-container">
+	<h3>
+		A simulated lab space for Purdue University's Nuclear Engineering department.<br>
+	
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
 		<img class="software-icon" src="/resources/icons/git.png">
-	</div>
-	<h3>A simulated lab space for Purdue University's Nuclear Engineering department.</h3>
+	
+	</h3>
 
-	<div style="padding:56.25% 0 0 0; position:relative; background-color:black;">
-		<iframe src="https://player.vimeo.com/video/891968434?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
-				style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-				allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-	</div>
-
+	<iframe class="webvid"
+			src="https://player.vimeo.com/video/891968434?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+			
 	<script src="https://player.vimeo.com/api/player.js"></script>
 	
 	<p>
-		This is a virtual lab project led by Prof. Stylianos Chatzidakis.
+		This is a virtual lab project led by Purdue University Prof. Stylianos Chatzidakis.
 		It increases accessibility to curriculum-necessary radiation spectrum analysis equipment
 		with a virtual web-based lab space.
-		Leveraging Unity, I'm responsible for most visuals and scripting.
+		Built on Unity, I'm responsible for most visuals and scripting.
 	</p>
 	
 	<a href="virtuallab/Screenshot_1.png" target="_blank"><img src="virtuallab/Screenshot_1.png"></a>
 	
 	<p>
-		I collaborated with Purdue Prof. Stylianos Chatzidakis and his team to
+		I collaborated with Prof. Chatzidakis and his team to
 		model the equipment in code.
 		Inputs & outputs are fully simulated and everything interacts realistically.
 		The program is therefore a flexible 'sandbox' and will deal with any 
