--- a/portfolio/dioramas.html
+++ b/portfolio/dioramas.html
@@ -16,43 +16,33 @@
 <article>
 
 	<h1>miscellaneous models</h1>
-	<div class="horizontal-container">
+	<h3>
+		Light baking tests for high-fidelity graphics on low-spec hardware.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
-	</div>
-	<h3>Light baking tests for high-fidelity graphics on low-spec hardware.</h3>
+	</h3>
 
-	<iframe style="width: 100%; aspect-ratio: 16/9;"
-		title="CGT116 Week 8 - advanced unit blocks" 
-		frameborder="0" 
-		allowfullscreen mozallowfullscreen="true" 
-		webkitallowfullscreen="true" 
+	<iframe class="webvid"
+		allowfullscreen
 		allow="autoplay; fullscreen; xr-spatial-tracking" 
 		xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
 		src="https://sketchfab.com/models/180703cf088f45528cd8363554e7b7f5/embed?preload=1"> 
 	</iframe>
 	
-	<iframe style="width: 100%; aspect-ratio: 16/9;"
-		title="CGT116 Week 8 - advanced unit blocks" 
-		frameborder="0" 
-		allowfullscreen mozallowfullscreen="true" 
-		webkitallowfullscreen="true" 
+	<iframe class="webvid"
+		allowfullscreen
 		allow="autoplay; fullscreen; xr-spatial-tracking" 
 		xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
-		src="https://sketchfab.com/models/be719186e19b4ea7adf5fd58a3d55191/embed?preload=1"> 
+		src="https://sketchfab.com/models/be719186e19b4ea7adf5fd58a3d55191/embed?preload=1">
 	</iframe>
 	
-	<iframe style="width: 100%; aspect-ratio: 16/9;"
-		title="CGT116 Week 8 - advanced unit blocks" 
-		frameborder="0" 
-		allowfullscreen mozallowfullscreen="true" 
-		webkitallowfullscreen="true" 
+	<iframe class="webvid"
+		allowfullscreen
 		allow="autoplay; fullscreen; xr-spatial-tracking" 
 		xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
 		src="https://sketchfab.com/models/8c6de08c5dd8447f8647d73d3bd4a908/embed?preload=1"> 
 	</iframe>
-	
 
 </article>
 
