--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -16,19 +16,17 @@
 <article>
 
 	<h1>global game jam 2024</h1>
-	<div class="horizontal-container">
+	<h3>
+		A clown-wrangling VR game made in 48 hours by a team of 3.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/git.png">
 		<img class="software-icon" src="/resources/icons/meta.png">
-	</div>
-	<h3>A clown-wrangling VR game made in 48 hours by a team of 3.</h3>
+	</h3>
 	
-	<div style="padding:56.25% 0 0 0; position:relative; background-color:black;">
-		<iframe src="https://player.vimeo.com/video/914606490?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
-				style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-				allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-	</div>
+	<iframe class="webvid"
+		src="https://player.vimeo.com/video/914606490?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+		allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	
 	<p>
 		Made with Unity together with 
