re-add polyhaven and ambientcg icons

--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -22,6 +22,7 @@
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/git.png">
 		<img class="software-icon" src="/resources/icons/meta.png">
+		<img class="software-icon" src="/resources/icons/polyhaven.png">
 	</h3>
 	
 	<iframe class="webvid"
