--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -23,6 +23,8 @@
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/motive.png">
 		<img class="software-icon" src="/resources/icons/meta.png">
+		<img class="software-icon" src="/resources/icons/polyhaven.png">
+		<img class="software-icon" src="/resources/icons/ambientcg.png">
 	</h3>
 	
 	<iframe class="webvid"
