--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -24,6 +24,7 @@
 		<img class="software-icon" src="/resources/icons/marmoset.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
 		<img class="software-icon" src="/resources/icons/git.png">
+		<img class="software-icon" src="/resources/icons/ambientcg.png">
 	
 	</h3>
 
