--- a/about.html
+++ b/about.html
@@ -24,14 +24,10 @@
     </p>
 	
     <p>
-        I love interactive media, but I want to work on things
-		that help people more directly than through entertainment alone.
-		Scientific visualization and virtual education are my current focuses.
-    </p>
-    <p>
-		That said, I still have a keen interest in design and aesthetics.
-        While I believe that form should always follow function, 
-		I still love giving my work polished visuals when appropriate.
+		While I believe that form should always follow function,
+		I still have a keen interest in design and aesthetics.
+		I love giving my work a polished look and feel if appropriate 
+		and as long as it doesn't sacrifice functionality.
     </p>
 
 </article>
