update about me

--- a/about.html
+++ b/about.html
@@ -26,8 +26,10 @@
     <p>
 		While I believe that form should always follow function,
 		I still have a keen interest in design and aesthetics.
-		I love giving my work a polished look and feel if appropriate 
-		and as long as it doesn't sacrifice functionality.
+		I especially love creating refined visuals for 
+		performace-constrained platforms such as web and mobile VR. 
+		Such constraints ask for more of a personal human touch to work within, and
+		my ultimate goal is to make people ask "how did they do this with that?!"
     </p>
 
 </article>
