--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 <article>
 
 	<h1 style="margin-bottom: 0;">Julian Triveri</h1>
+	
+	<!-- <h3> -->
+		<!-- <img class="software-icon" src="/resources/icons/unity.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/csharp.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/meta.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/git.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/blender.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/houdini.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/motive.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/marmoset.png"> -->
+		<!-- <img class="software-icon" src="/resources/icons/substance.png"> -->
+	
+	<!-- </h3> -->
 
     <div class="grid" style="padding-top: 75px;">
 
