add virtual lab interactive model viewer

--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -7,14 +7,13 @@
 	<link rel="stylesheet" href="/resources/style.css">
 
 	<script src="/resources/nav.js" type="text/javascript"></script>
-
+	
 </head>
 <body>
 
 <nav id="nav"></nav>
 
 <article>
-
 	<h1>nuclear engineering<br>virtual education</h1>
 	<h3>
 		A simulated lab space for Purdue University's Nuclear Engineering department.<br>
@@ -27,7 +26,7 @@
 		<img class="software-icon" src="/resources/icons/ambientcg.png">
 	
 	</h3>
-
+	
 	<iframe class="webvid"
 			src="https://player.vimeo.com/video/891968434?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
@@ -52,7 +51,7 @@
 		This modularity also makes it easy to add new equipment in the future.
 	</p>
 	
-	<a href="virtuallab/wire1.png" target="_blank"><img src="virtuallab/wire1.png"></a>
+	<iframe class="webvid" src="virtuallab/tbexport.html"></iframe>
 	
 	<p>
 		A lot of care went into the visuals and user interaction to teach
