--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -3,16 +3,25 @@
 <html>
 <head>
     <title></title>
+	<link rel="stylesheet" href="/resources/style.css">
     <script src="https://viewer.marmoset.co/main/marmoset.js"></script>
 </head>
 <body style="margin:0; padding:0;">
     <script>
 		marmoset.largeUI = true;
-		var viewer = new marmoset.WebViewer(window.innerWidth , window.innerHeight , 'tbexport.mview');
+		var viewer = new marmoset.WebViewer(window.innerWidth , window.innerHeight - 50, 'tbexport.mview');
 		document.body.appendChild(viewer.domRoot);
-		viewer.stripData.selectedStrip = -1;
+		viewer.loadScene();
 		
-		addEventListener("resize", (event) => {viewer.resize(window.innerWidth , window.innerHeight);});
+		addEventListener("resize", (event) => {viewer.resize(window.innerWidth , window.innerHeight - 50);});
     </script>
+	
+	
+	<div style="position:absolute; width:100%; height: 50px; text-align: center; 
+	line-height:50px; font-size:25px; font-family:title;">
+		Interactive 3D view:
+		<a onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
+		<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wireframe</a>
+	</div>
 </body>
 </html>
