--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -50,7 +50,7 @@
 		and scratches that grace their real counterparts.
 	</p>
 	<p>
-		The program runs in a browser and is optimized for even low-spec devices
+		The program runs in a browser and is optimized for low-spec devices
 		such as Chromebooks and tablets.
 		There are max 25k triangles rendered in 22 draw events.
 		The program's load size is shy of 50mb.
