dont start 3d view automatically

--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -10,7 +10,7 @@
     <script>
 		marmoset.largeUI = true;
 		marmoset.transparentBackground = true;
-		var viewer = marmoset.embed('tbexport.mview', { fullFrame: true, autoStart: true });
+		var viewer = marmoset.embed('tbexport.mview', { fullFrame: true, autoStart: false });
     </script>
 	
 	
