--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -44,9 +44,9 @@
 	<p>
 		A lot of care went into the visuals and user interaction to teach
 		students how to properly use the equipment. 
-		Users don't interface with 2D abstractions of this equipment but instead 
+		Users don't interface with 2D abstractions but instead 
 		press buttons, flip switches, and turn knobs on accurate 3D representations. 
-		I decorated these with the same labels, stickers, stains, 
+		I decorated these models with the same labels, stickers, stains, 
 		and scratches that grace their real counterparts.
 	</p>
 	<p>
