--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
 		I still have a keen interest in design and aesthetics.
 		I especially love creating refined visuals for 
 		performace-constrained platforms such as web and mobile VR. 
-		Such constraints ask for more of a personal human touch to work within, and
-		my ultimate goal is to make people ask "how did they do this with that?!"
+		Working within such constraints requires a more human touch
+		where problem solving and clever tricks make all the difference. 
     </p>
 
 </article>
