--- a/about.html
+++ b/about.html
@@ -21,6 +21,11 @@
 		and an employee at a 
 		<a href="https://www.rcac.purdue.edu/envision">university run visualization lab</a>.
 		Several projects shown on this site come from my work there.
+	</p>
+	
+	<p>
+		I have experience in realtime 3D art, basic animation, and high-level programming, and I'm currently
+		expanding my skillset to include graphics and low-level programming.
     </p>
 	
     <p>
@@ -30,6 +35,9 @@
 		performace-constrained platforms such as web and mobile VR. 
 		Working within such constraints requires a more human touch
 		where problem solving and clever tricks make all the difference. 
+		Squeezing an unexpected level of performance out of a relatively
+		weak device is a fun challenge, and it is why I'm increasingly exploring 
+		topics in graphics programming and low-level code.
     </p>
 
 </article>
