--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -67,7 +67,8 @@
 		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth</a>.
 		This gives the environment just enough depth to look convincing 
 		as long as you don't stray too far from the center. 
-		Its janky, but good enough for a game jam!
+		Because of how basic the environment is, the game can render at a 
+		crisp 3000x3000+ resolution, much higher than default. 
 	</p>
 	
 	<p>
