--- a/about.html
+++ b/about.html
@@ -35,10 +35,18 @@
 		performace-constrained platforms such as web and mobile VR. 
 		Working within such constraints requires a more human touch
 		where problem solving and clever tricks make all the difference. 
-		Squeezing an unexpected level of performance out of a relatively
-		weak device is a fun challenge, and it is why I'm increasingly exploring 
-		topics in graphics programming and low-level code.
     </p>
+	<p>
+		If I can be candid and a little unprofessional for a moment, 
+		I often ask myself whether my work matters that much.
+		The world is full of many important problems, 
+		few of which are solved by computer nerds who can
+		make pretty pictures. 
+		If you are someone who is working on something important
+		and impactful and my sort of work would somehow
+		help your effort, please do not hesitate to contact me.
+		I would rather sink my time and effort into things that truly matter.
+	</p>
 
 </article>
 
