--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     </p>
 	<p>
 		If I can be candid and a little unprofessional for a moment, 
-		I often ask myself whether my work matters that much.
+		I want to admit that I often ask myself whether my work matters that much.
 		The world is full of many important problems, 
 		few of which are solved by computer nerds who can
 		make pretty pictures. 
