--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
 		help your effort, please do not hesitate to contact me.
 		I would rather sink my time and effort into things that truly matter.
 	</p>
+	<p>
+		God Bless
+	</p>
 
 </article>
 
