--- a/about.html
+++ b/about.html
@@ -40,11 +40,10 @@
 		If I can be candid and a little unprofessional for a moment, 
 		I want to admit that I often ask myself whether my work matters that much.
 		The world is full of many important problems, 
-		few of which are solved by computer nerds who can
-		make pretty pictures. 
-		If you are someone who is working on something important
-		and impactful and my sort of work would somehow
-		help your effort, please do not hesitate to contact me.
+		few of which are solved by computer nerds who make pretty pictures. 
+		If you are someone who is working on something important and impactful 
+		and my sort of work would somehow help your effort, 
+		please do not hesitate to contact me.
 		I would rather sink my time and effort into things that truly matter.
 	</p>
 	<p>
