--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -9,7 +9,7 @@
 <body style="margin:0; padding:0;">
     <script>
 	
-		marmoset.largeUI = true;
+		// marmoset.largeUI = true;
 		marmoset.transparentBackground = true;
 		
 		var viewer = marmoset.embed('tbexport.mview', { fullFrame: true });
@@ -29,11 +29,13 @@
     </script>
 	
 	
-	<div style="position:absolute; width:100%; height: 50px; bottom:0; text-align: center; 
-	line-height:50px; font-size:25px; font-family:title; background-color:#000000DD;">
-		Interactive 3D view:
-		<a onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
-		<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wireframe</a>
+	<div style="position:absolute; width: 100%; height: 50px; bottom:0; 
+	text-align: center; line-height:50px; font-size:25px; font-family:title;
+	margin-left: auto; margin-right: auto; overflow:hidden;">
+		<div style="background-color:#000000DD; padding: 20px; display:inline;">
+			<a onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
+			<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wireframe</a>
+		</div>
 	</div>
 </body>
 </html>
