--- a/resources/nav.html
+++ b/resources/nav.html
@@ -14,13 +14,15 @@
 	</ul>
 
 	<ul style="font-size:18px; padding-top:20px;">
-		<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
-			sketchfab</a></li>
+		<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
+			bsky</a>
+		<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
+			twitter</a>
 		<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
-			github</a></li>
-		<li><a href="https://www.linkedin.com/in/trev3d/" target="_blank" rel="noopener noreferrer">
-			linkedin</a></li>
+			github</a>
+		<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
+			sketchfab</a>
 
-		<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m</li>
+		<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m
 	</ul>
 </div>
