--- a/about.html
+++ b/about.html
@@ -44,7 +44,8 @@
 		If you are someone who is working on something important and impactful 
 		and my sort of work would somehow help your effort, 
 		please do not hesitate to contact me.
-		I would rather sink my time and effort into things that truly matter.
+		I would love to work with you and 
+		sink my time and effort into things that truly matter.
 	</p>
 	<p>
 		God Bless
