--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -30,7 +30,7 @@
 		allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	
 	<p>
-		Made with Unity together with 
+		Made together with 
 		<a href="https://jake-white.github.io/" target="_blank">Jake White</a>
 		and 
 		<a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">George Takahashi</a>, 
@@ -63,7 +63,7 @@
 	<p>
 		The environment is made of two CC0 360 images from 
 		<a href="https://polyhaven.com/" target="_blank">PolyHaven</a>,
-		one of which I projected onto a heavily modified mesh that I generated using 
+		one of which I projected onto a heavily modified mesh initially created using 
 		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth</a>.
 		This gives the environment just enough depth to look convincing 
 		as long as you don't stray too far from the center. 
